[tool.poetry]
name = "project"
version = "0.1.0"
description = "A generic Python project template."
license = "Apache-2.0"
authors = ["Severin Simmler <severin.simmler@posteo.de>"]
readme = "README.md"
homepage = "https://severinsimmler.github.io/project"
repository = "https://github.com/severinsimmler/project"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
